--- a/calientitoapp-web/src/app/components/index/login/login.component.html
+++ b/calientitoapp-web/src/app/components/index/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-usuarios"
+<div class="bg-yellow2"
   class="contenido-scroll overflow-y-scroll max-[300px]:w-auto w-full h-full items-center min-h-screen bg-no-repeat bg-cover bg-center
    p-5  flex flex-row  min-[956px]:space-x-14
    min-[956px]:pl-14 min-[956px]:pr-14 2xl:space-x-48
@@ -32,7 +32,7 @@
         </ul> -->
 
         <div class="flex flex-col break-words bg-white shadow-lg rounded-lg">
-          <div class="relative p-3 sm:p-5 rounded-t-lg bg-sky700">
+          <div class="relative p-3 sm:p-5 rounded-t-lg bg-yellow2">
             <button class="absolute mt-[0.2em] ml-[2em] self-center w-14 h-14 3xl:w-16 3xl:h-16 rounded-full shadow-lg bg-white">
               <fa-icon class="text-sky700 fa-2xl" [icon]="faGear"></fa-icon>
             </button>
@@ -40,8 +40,8 @@
               class="justify-center w-full h-full flex items-center pl-4 text-md sm:pl-14 sm:text-base min-[956px]:text-xl 3xl:text-2xl">
 
               <div class="px-4 sm:px-10 text-white">
-                <p class="text-left font-bold pb-0">Autotech</p>
-                <p class="text-right pb-0">Usuarios</p>
+                <p class="text-left font-bold pb-0 text-black">CALIENTITO APP</p>
+
               </div>
             </div>
           </div>
