--- a/calientitoapp-web/src/styles.scss
+++ b/calientitoapp-web/src/styles.scss
@@ -14,33 +14,33 @@
   --color-red-70: rgba(209, 62, 73, 0.7);
 }
 
-// .Card {
-//   @apply w-48 h-64 shadow-md rounded-lg flex-none transform transition-all hover:-translate-y-4 hover:shadow-xl
-// }
+.Card {
+  @apply w-48 h-64 shadow-md rounded-lg flex-none transform transition-all hover:-translate-y-4 hover:shadow-xl
+}
 
-// .CardTitle {
-//   @apply text-3xl px-8 pt-8 pb-2 font-semibold text-white
-// }
+.CardTitle {
+  @apply text-3xl px-8 pt-8 pb-2 font-semibold text-white
+}
 
-// .ButtonIngresar {
-//   @apply flex items-center justify-center space-x-4
-// }
+.ButtonIngresar {
+  @apply flex items-center justify-center space-x-4
+}
 
-// .ButtonConsultar {
-//   @apply rounded-full text-sm font-semibold text-white font-sans w-24 h-7 bg-sky700
-// }
+.ButtonConsultar {
+  @apply rounded-full text-sm font-semibold text-white font-sans w-24 h-7 bg-sky700
+}
 
-// .ButtonConsultarHover {
-//   @apply rounded-full text-sm font-semibold text-white font-sans w-24 h-7 bg-teal-500
-// }
+.ButtonConsultarHover {
+  @apply rounded-full text-sm font-semibold text-white font-sans w-24 h-7 bg-teal-500
+}
 
-// .Paragraphs {
-//   @apply block mb-2 text-xs text-neutral400 lg:text-sm
-// }
+.Paragraphs {
+  @apply block mb-2 text-xs text-neutral400 lg:text-sm
+}
 
-// .InfoParagraphs {
-//   @apply block mb-2 text-xs font-semibold text-neutral700 lg:text-sm
-// }
+.InfoParagraphs {
+  @apply block mb-2 text-xs font-semibold text-neutral700 lg:text-sm
+}
 
 .z-last {
   z-index: 10000 !important
