cambio logo y color fondo

--- a/calientitoapp-web/src/app/components/index/login/login.component.html
+++ b/calientitoapp-web/src/app/components/index/login/login.component.html
@@ -2,10 +2,10 @@
   class="contenido-scroll overflow-y-scroll max-[300px]:w-auto w-full h-full items-center min-h-screen bg-no-repeat bg-cover bg-center
    p-5  flex flex-row  min-[956px]:space-x-14
    min-[956px]:pl-14 min-[956px]:pr-14 2xl:space-x-48
-   2xl:pl-72 2xl:pr-72 ">
+   2xl:pl-72 2xl:pr-72 " style="background-color: #fac901;">
   <div
     class="pr-[6em] hidden min-[1530]:pr-[0em] w-full  min-[956px]:w-2/5  h-full min-[956px]:flex min-[956px]:items-center min-[956px]:justify-center 3xl:justify-end">
-    <div class="border-8 border-white bg-white rounded-lg">
+    <div class="border-8 border-white bg-yellow2 rounded-lg">
       <img class="rounded-lg w-80 h-20 xl:w-128 xl:h-32 2xl:w-128 2xl:h-36 3xl:w-full 3xl:h-48" [src]="imgEnterprise" />
     </div>
   </div>
