--- a/calientitoapp-web/src/app/components/index/password/password.component.html
+++ b/calientitoapp-web/src/app/components/index/password/password.component.html
@@ -1,1 +1,61 @@
-<p>password works!</p>
+<div
+  class="contenido-scroll overflow-y-scroll max-[300px]:w-auto w-full h-full min-h-screen bg-no-repeat bg-cover bg-center
+     flex flex-row" style="background-color: #e8e8e8;">
+
+  <div class="  w-full  flex  flex-col">
+    <div class="w-full h-48  items-center justify-center rounded-2xl pr-[0em] min-[1330px]:pr-[6em] bg-yellow2">
+      <div class="flex justify-between pt-5">
+        <div>
+          <button type="submit" (click)="volver()" class="rounded-full text-lg font-semibold text-white font-sans w-28 h-8">
+            <fa-icon [icon]="faChevronLeft"></fa-icon>
+          </button>
+        </div>
+        <div>
+            <button type="submit" class="rounded-full text-lg font-semibold text-white font-sans w-28 h-8">
+              <fa-icon [icon]="faBars"></fa-icon>
+            </button>
+        </div>
+      </div>
+      <div>
+        <p class="text-white font-bold flex justify-center ml-5 mt-12 text-4xl">CREATE YOUR ACCOUNT</p>
+      </div>
+    </div>
+    <div class="pr-7 pl-7  py-5">
+      <form class="space-y-6 mb-7" [formGroup]="form">
+
+        <div>
+          <app-field-input [parentForm]="form" fieldName="userName" formControlName="userName"
+            holder="Email"></app-field-input>
+        </div>
+        <div>
+          <app-field-input [parentForm]="form" fieldName="userName" formControlName="userName"
+            holder="Full Name"></app-field-input>
+        </div>
+        <div>
+          <app-field-input [parentForm]="form" fieldName="userName" formControlName="userName"
+            holder="Username"></app-field-input>
+        </div>
+        <div>
+          <app-field-input type="password" holder="Contraseña" [parentForm]="form" fieldName="password"
+            formControlName="password"></app-field-input>
+        </div>
+        <div>
+          <app-field-input type="password" holder="Contraseña" [parentForm]="form" fieldName="password"
+            formControlName="Repeat password"></app-field-input>
+        </div>
+
+      </form>
+      <div class="ButtonIngresar">
+          <button type="submit" class="flex items-center justify-center max-[350px]:ml-0 rounded-full py-3 px-6 text-lg font-semibold   xl:text-base bg-yellow2 text-white font-sans w-full h-10">
+            <span>Create Account</span>
+          </button>
+      </div>
+    </div>
+
+
+  </div>
+
+</div>
+
+
+
