--- a/calientitoapp-web/src/styles.scss
+++ b/calientitoapp-web/src/styles.scss
@@ -14,6 +14,7 @@
   --color-red-70: rgba(209, 62, 73, 0.7);
 }
 
+// @apply Directive
 .Card {
   @apply w-48 h-64 shadow-md rounded-lg flex-none transform transition-all hover:-translate-y-4 hover:shadow-xl
 }
@@ -21,7 +22,12 @@
 .CardTitle {
   @apply text-3xl px-8 pt-8 pb-2 font-semibold text-white
 }
-
+.badge{
+  @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+}
+.btn{
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider;
+}
 .ButtonIngresar {
   @apply flex items-center justify-center space-x-4
 }
