--- a/calientitoapp-web/src/app/components/page/home/home.component.html
+++ b/calientitoapp-web/src/app/components/page/home/home.component.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="py-1">
-          <a routerLink="/products" class="px-4 flex justify-end border-r-4 border-white">
+          <a routerLink="/category" class="px-4 flex justify-end border-r-4 border-white">
             <span>Products</span>
             <fa-icon class="w-5 ml-2" [icon]="faBreadSlice"></fa-icon>
           </a>
@@ -143,7 +143,7 @@
          </div>
 
          <div class="bg-black rounded over-flow-hidden shadow-md relative hover:shadow-lg h-40 flex justify-center items-center">
-          <button (click)="OnProducts()">
+          <button (click)="OnCategory()">
             <div class="m-4">
               <fa-icon class=" text-yellow2 flex justify-center text-5xl" [icon]="faBreadSlice"></fa-icon>
               <span class="font-bold text-white flex justify-center">Products</span>
