--- a/calientitoapp-web/src/app/components/page/bakeries/bakeries.component.html
+++ b/calientitoapp-web/src/app/components/page/bakeries/bakeries.component.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="py-1">
-          <a routerLink="/products" class="px-4 flex justify-end border-r-4 border-white">
+          <a routerLink="/category" class="px-4 flex justify-end border-r-4 border-white">
             <span>Products</span>
             <fa-icon class="w-5 ml-2" [icon]="faBreadSlice"></fa-icon>
           </a>
@@ -89,12 +89,15 @@
     <div>
       <div class="mt-8 grid lg:grid-cols-3 gap-10">
         <!-- cards go here -->
-         <div class="bg-yellow2 rounded over-flow-hidden shadow-md relative hover:shadow-lg">
-          <img src="assets/img/personal_panaderia.jpg" alt="croissant" class="w-full h-32 sm:h-48 object-cover">
-          <div class="m-4">
-            <span class="font-bold flex justify-center">Panaderia 1</span>
+        <button (click)="OnProducts()">
+          <div class="bg-yellow2 rounded over-flow-hidden shadow-md relative hover:shadow-lg">
+            <img src="assets/img/personal_panaderia.jpg" alt="croissant" class="w-full h-32 sm:h-48 object-cover">
+            <div class="m-4">
+
+              <span class="font-bold flex justify-center">Panaderia 1</span>
+            </div>
           </div>
-         </div>
+        </button>
 
          <div class="bg-yellow2 rounded overflow-hidden shadow-md relative hover:shadow-lg">
           <img src="assets/img/decoraciones.jpg" alt="croissant" class="w-full h-32 sm:h-48 object-cover">
