--- a/calientitoapp-web/src/app/components/page/help/help.component.html
+++ b/calientitoapp-web/src/app/components/page/help/help.component.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="py-1">
-          <a routerLink="/products" class="px-4 flex justify-end border-r-4 border-white">
+          <a routerLink="/category" class="px-4 flex justify-end border-r-4 border-white">
             <span>Products</span>
             <fa-icon class="w-5 ml-2" [icon]="faBreadSlice"></fa-icon>
           </a>
